// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Descriptive Card Displays custom properties 1`] = `
<v-card-stub loaderheight="4" tag="div" height="255" width="280" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <!---->
  <div class="d-flex justify-center pb-4 mt-2 mr-8">
    <div class="dot">
      <icon-stub type="model-unsubscribe" size="44" color="primary" fillopacity="1" class="d-block"></icon-stub>
    </div>
  </div>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <!---->
</v-card-stub>
`;

exports[`Cards Descriptive Card Displays custom slots 1`] = `
<v-card-stub loaderheight="4" tag="div" height="255" width="280" class="descriptive-card align-center text-center rounded-lg mr-10 mb-10">
  <div class="card-status pa-3 pb-0">
    <div>Top spot</div>
    <v-menu-stub opendelay="0" closedelay="0" contentclass="" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" openonclick="true" closeonclick="true" closeoncontentclick="true" maxheight="auto" origin="top left" transition="v-menu-transition">
      <div class="black--text text-darken-4 cursor-pointer px-4 py-2 white">
        Activate
      </div>
    </v-menu-stub>
    <!---->
  </div>
  <!---->
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <tooltip-stub contentclass="" maxwidth="auto" minwidth="auto !important" nudgeright="100px"></tooltip-stub>
  <div class="px-3 pt-2">
    <p>Default content</p>
  </div>
</v-card-stub>
`;
